fix: not showing messages on chat

--- a/apps/adopta/static/css/base.css
+++ b/apps/adopta/static/css/base.css
@@ -186,7 +186,7 @@ h6 {
 .round-btn i {
     align-self: center;
     font-size: .5em;
-    margin: 16%;
+    margin: 23%;
 }
 
 .search-button {
