--- a/apps/adopta/static/css/fl-info.css
+++ b/apps/adopta/static/css/fl-info.css
@@ -81,3 +81,14 @@
         width: 90%;
     }
 }
+
+
+@media only screen and (max-width: 540px) {
+  .info-modal-content {
+      margin: 10% 0;
+  }
+
+  .info-modal-content input {
+      width: 90%;
+  }
+}
